# watchtower

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: checks.yml  leopold-schedule.yml  smoketigers-schedule.yml
watchtower/: .env.sample  mailer.py  settings.py
watchtower/leopold/: .env.sample  client.py  html.py  mail.py  main.py  settings.py
watchtower/leopold/tests/: conftest.py  test_html.py  test_mail.py  test_main.py
watchtower/smoketigers/: main.py
watchtower/templates/: email_template.html
watchtower/templates/leopold/: leopold_in_stock.html  leopold_sold_out.html
watchtower/tests/leopold/: conftest.py  test_client.py  test_main.py
watchtower/tests/mailer/: conftest.py  test_mailer.py
watchtower/tests/smoketigers/: conftest.py  test_main.py
